tests/error/errors_on_usage/var_undefined_before_modifier2.py
from guppylang import guppy
from guppylang.std.builtins import power

@guppy
def main(b: bool) -> None:
    x = 3
    
    if b:
        y = 2
    a = i
    with power(2):
         i = 1
    a = y


                
main.check()
