tests/error/errors_on_usage/var_undefined_before_modifier2.err
Error: Variable not defined (at $FILE:10:8)
   | 
 8 |     if b:
 9 |         y = 2
10 |     a = i
   |         ^ `i` is not defined

Guppy compilation failed due to 1 previous error
